--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
         "php": ">=7.4.0",
         "illuminate/support": "^7.0|^8.0",
         "monolog/monolog": "^2.0",
-        "nesbot/carbon": "^2.31",
+        "nesbot/carbon": "^2.31"
     }
 }
