--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
         "illuminate/support": "^7.0|^8.0",
         "monolog/monolog": "^2.0",
         "nesbot/carbon": "^2.31"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
