--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "nesbot/carbon": "^2.31"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "orchestra/testbench": "^6"
     }
 }
