--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
             "Chistowick\\Lettuce\\": "src/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=7.4.0",
         "illuminate/support": "^7.0|^8.0",
